<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:color="@color/searchColor"
        android:icon="@drawable/baseline_search_black_18dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_category"
        android:color="@color/cateColor"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_category" />
    <item
        android:id="@+id/navigation_cart"
        android:color="@color/cartColor"
        android:icon="@drawable/baseline_shopping_cart_black_24dp"
        android:title="@string/title_cart" />
    <item
        android:id="@+id/navigation_menu"
        android:color="@color/menuColor"
        android:icon="@drawable/baseline_menu_black_24dp"
        android:title="@string/title_menu" />

</menu>
