<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:textSize="20dp"
            android:id="@+id/textViewTaiKhoan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/taiKhoan" />

        <EditText
            android:id="@+id/editTextHoTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:inputType="textPersonName"
            android:hint="@string/hoTen" />

        <EditText
            android:id="@+id/editTextDiaChi"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:hint="@string/diaChi" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/editTextSDT"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:hint="@string/sdt" />

        <TextView
            android:textSize="20dp"
            android:id="@+id/textViewTongChi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/tongChiTieu" />
        <Button
            android:id="@+id/buttonCapNhat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/thayDoiThongTin" />

        <Button
            android:id="@+id/buttonQuayLai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/nutQuayLai" />

        <Button
            android:id="@+id/buttonDangXuat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/dangXuat" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listViewLichSuMua">
        </ListView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>