<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".XacNhanGiaoHangActivity">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:text="@string/thongTinNguoiNhan"/>


        <EditText
            android:id="@+id/editTextHoTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hoTen"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextDiaChi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/diaChi"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextSDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sdt"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textViewTongTien"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_margin="5dp"
            android:text="@string/tongTien"
            android:textColor="@android:color/holo_red_light"
            android:textSize="25sp"
            android:textStyle="bold" />
        <Button

            android:background="@drawable/my_button_green"
            android:id="@+id/buttonXacNhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/nutXacNhan" />
        <Button
            android:id="@+id/buttonQuayLai"
            android:background="@drawable/my_button_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/nutQuayLai" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>