<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity"
    android:id="@+id/main_content">

    <ListView
        android:id="@+id/listViewGioHang"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

    </ListView>

    <TextView
        android:id="@+id/textViewTongTien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="28sp"
        android:textColor="@color/cateColorDark"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tongTien"
        app:layout_constraintBottom_toTopOf="@+id/buttonThanhToan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewGioHang" />

    <Button
        android:id="@+id/buttonThanhToan"
        android:layout_width="298dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="84dp"
        android:layout_weight="1"
        android:background="@drawable/my_button_green"
        android:text="@string/nutThanhToan"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toStartOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="84dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:src="@drawable/purchase"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonMuaTiep"
        android:background="@drawable/my_button_yellow"
        android:layout_width="298dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nutMuaTiep"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/buttonThanhToan" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.444"
        app:srcCompat="@drawable/shopping" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>